fix: improve navbar spacing

--- a/components/styles.sass
+++ b/components/styles.sass
@@ -11,13 +11,14 @@ $home-bg-img: url(/images/the-matrix.jpg)
   margin: 0 auto
 
 .navbar
+  mar
   display: flex
+  align-items: center
+  justify-content: center
   position: fixed
   width: 100vw
   background: unset !important
-
-  img
-    margin-top: 1rem
+  margin-top: 1rem
 
   .navbar-items
     background: unset !important
